# oracc2

./: .gitignore  Makefile.am  README.md  configure.ac  create_oracclocale_h.sh  gperf-size_t.sh  gperfl-size_t.sh  lnx-config.sh  mac-config.sh.in  mac-reconfig.sh  macos-httpd.conf  macos-single-oracc-vhost.conf  make-oracc.sh  o2.sed  oracc-am-rules.txt  oracc-clean-in.sh  oracc-pm.sh  oracc-subst.sh  oracc-vhost-ssl.conf  oracc-vhost.conf  oraccenv.sh  oraccenv.sh.in  oraccsed.sh  preconfig.sh  reconfig.sh  xcf2sh.xsl
lib/: Makefile.am
lib/asl/: Makefile.am  asl.c  asl.h  asl.l  asl.y  asl_bld.c  asl_config.c  asl_listdef.c  aslyacc.c  numvmap.g  signlist.h
lib/atf/: Makefile.am  atf.c  atf.h  atf.l  atf.y  atf_bld.c  atf_bld.h  atf_block.c  atf_comment.c  atf_dollar.c  atf_key.c  atf_label.c  atf_lang.c  atf_lem.c  atf_line.c  atf_nonx.c  atf_note.c  atf_symbolattr.c  atf_tlat.c  atf_tlit.c  atfyacc.c  block.c  block.h  blocktok.g  blocktok.h  etcsl.h  label.h  loadlabels.c  ncname.c  nonx.c  nonx.h  note.h  otf-defs.h  symbolattr.h  tr.c
lib/cat/: Makefile.am  cat.c  cat.l
lib/cbd/: Makefile.am  cbd.h  cbd.l  cbd.y  cbd_cgp.c  cbd_cmp.c  cbd_cofs.c  cbd_dotforms.c  cbd_form_walk.c  cbd_key.c  cbd_kis.c  cbd_lang.c  cbd_merge.c  cbd_no_fo_ba.c  cbd_oid.c  cbd_psus.c  cbdpos.c  cbdrws.c  cbdtags.c  cbdtags.g  cbdyacc.c  startstates.h
lib/chr/: Makefile.am  charsets.c  charsets.plx  subdig.c
lib/collate/: Makefile.am  collate.c  collate.h  mktablst.in  seq2c.in  tablist.c  unicode.c  unicode.seq
lib/expat/: Makefile.am
lib/fonts/: CuneiformClassic-final.def.in  CuneiformClassic-final.ofp  CuneiformClassic-final.ofpx  Makefile.am  Noto-SansCuneiform-Gudea.vfc  Noto-SansCuneiform-OSL.vfc  Noto-SansCuneiform-OSLx.vfc  NotoSansCuneiform-egg.vfc  Oracc-Assyrian.vfc  Oracc-Noto-SansCuneiform.def.in  Oracc-Noto-SansCuneiform.ofp  Oracc-Noto-SansCuneiform.ofpx  Oracc-OBF-Regular.def.in  Oracc-OBF-Regular.ofp  Oracc-OBF-Regular.ofpx  Oracc-gudea.def.in  Oracc-gudea.ofp  Oracc-gudea.ofpx  fonts.css  mzl-html.sh  mzl.lst  oa-edit.lst  oa-head.html  oa.css  oa.html  ofp.c  ofp.h  ofp2im.sh  ofp_dump.c  ofp_ingest.c  ofp_marshall.c  ofp_xml.c  oraccttf.sh  osl_unicode.c  osl_unicode.h  ttf2ofp.sh  ttf2oin.sh
lib/frm/: Makefile.am  form.c  form.h  form_alias.c  form_flags.c  form_inherit.c  form_jox.c  form_psu.c  form_serialize.c  form_sig.c  normify.c.in  phrase.c
lib/gdl/: Makefile.am  gcmptracex.plx  gdl.c  gdl.h  gdl.l  gdl.y  gdl_balance.c  gdl_group.c  gdl_jox.c  gdl_legacy.c  gdl_lexfld.c  gdl_meta.c  gdl_mod.c  gdl_one_off.c  gdl_rnv.c  gdlseq.c  gdlsig.c  gdlstate.c  gdlstate.h  gdlxml.c  gdlyacc.c  gsort.c  gsort.h  gsort_cmp_trace.c  gt.c  gt.h
lib/gvl/: Makefile.am  gvl.c  gvl.h  gvl_bridge.c  gvl_bridge.h  gvl_c.c  gvl_cuneify_tree.c  gvl_key.c  gvl_n.c  gvl_q.c  gvl_s.c  gvl_script.c  gvl_setup.c  gvl_uname_tree.c  gvl_util.c  oiv.c.in
lib/inl/: Makefile.am  inl.c  inl.h  inl_bib_h.c  inl_gdl_h.c  inl_nodes.c  inltok.g
lib/joxer/: Makefile.am  README  jox_jsn.c  jox_xml.c  joxer.c  joxer.h  joxer_rnvxml.h
lib/jsn/: Makefile.am  jsn_writer.c  json.h
lib/keydata/: Makefile.am  keydata.c  keydata.h
lib/kis/: Makefile.am  kis.c  kis.h
lib/l3/: Makefile.am  l3.h
lib/libstemmer_c/: Makefile.am
lib/lng/: Makefile.am  lang.h  lang_atf.g  lang_core.g  langinst.c  langinst.c.in  langtag.c  lng.h
lib/ofp/: Makefile.am  OIN-FORMAT.txt  ofp.c  ofp.h  ofp_debug.c  ofp_dump.c  ofp_header.c  ofp_ingest.c  ofp_list.c  ofp_marshall.c  ofp_xml.c  ofpdefs.g  osl_unicode.c  osl_unicode.h
lib/oid/: Makefile.am  oid.h  oid_domain.g  oid_edits.c  oid_load.c  oid_parse.c  oid_util.c
lib/rnc/: Makefile.am  asl.c  asl.rnc  bib.rnc  bm-names.rnc  c2-rng.sh  c2-rng2xnn.sh  c2-xnn2c.plx  cbd-lib.rnc  cbd-summaries.rnc  cbd.rnc  gdl-lib.rng  gdl.c  grapheme.rnc  grapheme.rng  graphmeta.rnc  graphmeta.rng  inl.rnc  keydata.rnc  ns-asl.h  ns-gdl.h  ns-xtf.h  numsys.rnc  words.rnc  words.rng  xcl-lib.rnc  xcl.rnc  xtf.c  xtf.rnc  xtf.rng  xtr-lib.rnc  xtr-lib.rng
lib/rnv/: Makefile.am  m.c  m.h  rnc.c  rnl.c  rnv.c  xsd.c
lib/sas/: Makefile.am  sas.h  sas_asa.c
lib/scan/: Makefile.am  scan.c  scan.h  scan_curly.c  scan_name.c  scan_square.c  scan_str_term.c  scan_text.c  scan_token.c  skip_white.c
lib/sll/: Makefile.am  sll.h  sll_cli.c  sll_dbi.c  sll_signlist.c  sll_signlist.h  sll_tsv.c  sll_util.c  sll_web.c  sllext.c
lib/std/: Makefile.am  hash.c  hash.h  iomethod.c  keva.c  keva.h  list.c  list.h  memo.c  memo.h  memo_exec.c  mesg.c  mesg.h  pool.c  pool.h  prop.c  prop.h  roco.c  roco.h  roco_row_format.c  roco_row_template.c  roco_write_xml.c  stck.c  stck.h  tree.c  tree.h  vido.c  vido.h
lib/sys/: Makefile.am  atf2utf.c  atf2utf.h  cfy_fam.c  cmpstringp.c  currmem.c  dbi.c  dbi.h  dbxlib.c  dbxlib.h  dirarray.c  dot_split.c  filecopy.c  fileutil.c  findfile.c  fname.c.in  glob.c  gutil.c  help.c  loadfile.c  longtext.c  longtext.h  norm_ws.c  olocale.c  options.c  oracc_builds.c.in  oraccsys.h  ose.c  ose.h  ose_types.h  pct.c  projhyph.c  rnvcheck.c  sexify.c  slurp.c  space_split.c  tab_split.c  uhex2utf8.c  utf.c  utf8ify.c  (+7 more)
lib/tis/: Makefile.am  tis.c  tis.h  tis_create.c  tis_load.c
lib/tok/: Makefile.am  all.proto  cbdex.c  cbdex.h  gsig.c  gsig.h  gsig_builder.c  gsig_parse.c  gsig_print.c  loch.h  lsig.h  mds_xmd.c  msig.h  psig.h  tloc.h  tloc_builder.c  tloc_cbd.c  tloc_tok.c  tloc_writer.c  tloc_xtf.c  tok.h  tok_g_xml.c  tok_l_xml.c  tok_load_tab.c  tok_loc.c  tok_m_xml.c  tok_writer.c  tok_xtf.c  tokflags.g  trun.c  trun.h
lib/tsv/: Makefile.am  all.proto  tdb_access.c  tdb_add.c  tdb_lib.c  tsv.h  tsv_create.c  tsv_index.c  tsv_init.c  tsv_lookup.c  tsv_one_off.c  tsv_output.c  tsv_paths.c  tsv_undbi.c
lib/xmd/: Makefile.am  xmd.c  xmd.h
lib/xml/: Makefile.am  oraccns.h  rnvif.c  rnvval.c  rnvval.h  rnvxml.c  runexpat.c  runexpat.h  tree_xml.c  xml.h  xmlfilter.c
lib/xpd/: Makefile.am  xpd.c.in  xpd.h  xpd.xsl.in
msc/cov/: Makefile.am  README.txt  aslsigns.sh  cbdneeduni.sh  crpneedfnt.sh  crpneeduni.sh  crpsigns.sh  (+9 more)
(+394 files in other folders)
