include ../../oracc-am-rules.txt

bin_PROGRAMS=showttfx

bin_SCRIPTS=ttf2ofp.sh

css_DATA=fonts.css

data_DATA=Oracc-Noto-SansCuneiform.ofp Oracc-gudea.ofp	\
	Oracc-OBF-Regular.ofp CuneiformClassic-final.ofp

font_DATA=Oracc-Noto-SansCuneiform.ttf Oracc-gudea.ttf	\
	Oracc-OBF-Regular.ttf CuneiformClassic-final.ttf

showttfx_SOURCES = showttf.c
showttfx_LDADD = $(xLDADD)
showttfx_DEPENDENCIES = $(xLDADD)
