include ../../oracc-am-rules.txt

noinst_LTLIBRARIES=libsys.la

libsys_la_SOURCES = cmpstringp.c fname.c slurp.c utf.c sexify.c options.c \
	xsystem.c loadfile.c dbi.c dbxlib.c gutil.c olocale.c uhex2utf8.c \
	pcre2if.c atf2utf.c uni2utf.c strrep.c itoa.c help.c utf8ify.c \
	tab_split.c dot_split.c space_split.c ose.c pct.c projhyph.c \
	fileutil.c vector.c inctrie.c filecopy.c glob.c cfy_fam.c dirarray.c \
	findfile.c rnvcheck.c
