include ../../oracc-am-rules.txt

bin_PROGRAMS=

bin_SCRIPTS= \
	cbdneeduni.sh crpneedfnt.sh crpneeduni.sh cslneedsign.sh \
	needasl.sh needfnt.sh needuni.sh nofakes.sh \
	aslsigns.sh cbdsigns.sh crpsigns.sh fntsigns.sh \
	fntatom.sh fntseqs.sh fntneedatoms.sh

scriptdata_DATA=

# XX_SOURCES=lex-collapse-refs.c
# XX_LDADD = $(xLDADD)
# XX_DEPENDENCIES = $(xLDADD)
